--- a/index.html
+++ b/index.html
@@ -14,18 +14,14 @@
     <title>To-Do List</title>
   </head>
   <body>
+    <h1 class="text-center border-bottom">To-Do List</h2>
+    <div></div>
     <div class="container">
-      <h1>To-Do List</h2>
-      <div>
-        <form id="todo-input">
-          <input id="new-task" type="text" placeholder="What needs to be done?" required>
-          
-          <button>Add to-do</button>
-        </form>
+      <form class="text-center" id="todo-input">
+        <input id="new-task" type="text" placeholder="What needs to be done?" required>
+        <button>Add to-do</button>
+      </form>
+      <div id="todo-list">
       </div>
     </div>
-    <div></div>
-    <div id="todo-list">
-    </div>
-    
   </body>
